# MiniTikTok-User-Http

./: .gitmodules  Cargo.toml  Dockerfile  README.md
.github/workflows/: publish.yaml
User/: Cargo.toml  build.rs
User/src/: _dirty.rs  combind_incoming.rs  lib.rs  main.rs  proto.rs  user_regist.rs  user_service.rs
manifests-dev/: configmap.yaml  deployment.yaml  service.yaml
