[package]
name = "mini_tiktok_user_http"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { version = "0", default-features = false, features = ["auto-color", "color", "humantime"] }
log = { version = "0", default-features = false }
prost = { version = "0", default-features = false }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "signal"] }
bb8-postgres = "0"
bb8-bolt = "0"
tonic = { version = "0", default-features = false, features = ["codegen", "prost", "transport"] }
axum = { version = "0", default-features = false, features = ["json", "query"] }
hyper = { version = "0", default-features = false }
bb8 = { version = "0", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
futures-io = { version = "0", default-features = false }
argon2 = { version = "0", features = ["std"] }

[build-dependencies]
tonic-build = "0"

